--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
 <div class="elemento">
-	                        	<h1 class="titulo"><span><a href="https://jorgb17.github.io/simulacion/p11">Practica : Práctica 1 (Parte 2)</a></span></h1>
+	                        	<h1 class="titulo"><span><a href="https://jorgb17.github.io/simulacion/p11">Práctica 1 (Parte 2): Muelle</a></span></h1>
 	                        	<a href="https://jorgb17.github.io/simulacion/p11"><img src="img/P1-1.PNG" alt="Smiley face" height="250" width="250"></a>
                         	</div>
 
